syntax = "proto3";

package tutorial;

option java_package = "sr.proto";
option java_outer_classname = "AddressBookProtos";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
  double incomePercentage = 4;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 5;

  message QuarterIncome {
    repeated double incomes = 1;
  }

  QuarterIncome quarterIncome = 6;
}

message AddressBook {
  repeated Person people = 1;
}

